--- a/src/app/drafts/matchup-overview/matchup-overview.component.html
+++ b/src/app/drafts/matchup-overview/matchup-overview.component.html
@@ -1,7 +1,7 @@
 @if (matchupId && matchupData) {
   <div class="matchup-main">
     <div class="matchup-header">
-      <button [routerLink]="['/', draftPath, leagueId]">Back</button>
+      <button [routerLink]="['/', draftPath, tournamentId]">Back</button>
       <div class="details-spacer">
         <div class="details-container">
           @if (matchupData) {
