--- a/src/app/drafts/opponent-overview/opponent-overview.component.html
+++ b/src/app/drafts/opponent-overview/opponent-overview.component.html
@@ -34,7 +34,7 @@
       <div class="draft-buttons">
         <button
           routerLink="../edit"
-          [queryParams]="{ draft: draft.leagueId | json }"
+          [queryParams]="{ draft: draft.tournamentId | json }"
         >
           <mat-icon>edit</mat-icon>
         </button>
