--- a/src/app/league-zone/league-sign-up/league-sign-up.component.html
+++ b/src/app/league-zone/league-sign-up/league-sign-up.component.html
@@ -241,7 +241,7 @@
               target="_blank"
               [href]="
                 'https://pokemondraftzone.com/leagues/' +
-                leagueInfo.leagueKey +
+                leagueInfo.tournamentKey +
                 '/rules'
               "
               class="link"
