--- a/src/app/league-zone/league-teams/league-teams.component.html
+++ b/src/app/league-zone/league-teams/league-teams.component.html
@@ -1,5 +1,7 @@
 <div class="teams-container">
   @for (team of teams; track team) {
     <pdz-league-team-card [teamDetails]="team"></pdz-league-team-card>
+  } @empty {
+    <div>No teams added to this division</div>
   }
 </div>
