remove tw colors

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <pdz-tooltip></pdz-tooltip>
-<div [ngClass]="getTheme()">
+<div>
   <pdz-top-navbar></pdz-top-navbar>
   <main>
     <pdz-body></pdz-body>
