--- a/src/app/pages/supporters/supporters.component.html
+++ b/src/app/pages/supporters/supporters.component.html
@@ -1,5 +1,5 @@
 <div class="support-page">
-  <h1 class="support-page__title">Support the Developers</h1>
+  <h1 class="support-page__title">Support the Site</h1>
 
   @for (dev of developers; track dev) {
     <div class="developer-card">
