--- a/src/app/league-zone/tournaments/tournament-landing/tournament-landing.component.scss
+++ b/src/app/league-zone/tournaments/tournament-landing/tournament-landing.component.scss
@@ -1,5 +1,5 @@
-@use "../../../styles/global.scss" as *;
-@use "../../../styles/mixins" as *;
+@use "../../../../styles/global.scss" as *;
+@use "../../../../styles/mixins" as *;
 
 :host {
   display: block;
